# krisha.kz

./: .gitignore  LICENSE.md  README.md  README.ru.md  SEARCH_PARAMETERS.json  analyzer.ipynb  cron.sh  logging.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
_sql/: date_sort.sql
db/: queries.py  service.py
scr/: config.py  crawler.py  first_page.py  flat.py
scr/misc/: exceptions.py  msg.py
src/krisha/: __main__.py  main.py
src/krisha/common/: msg.py
src/krisha/config/: app_config.py  config.py  logs.py  parser.py  path.py  search.py
src/krisha/config/models/: base.py  search.py
src/krisha/crawler/: first_page.py  flat_parser.py  spider.py
src/krisha/db/: base.py  queries.py  service.py
src/krisha/entities/: flat.py
src/krisha/exceptions/: base.py  config.py  crawler.py
tests/: test_first_page_url.py  test_flat.py  test_objects_and_method.py  test_search_parameters.py  test_search_parameters_validation.py
tests/fixtures/: fx_first_page.py  fx_flat.py  fx_search_params.py
