[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "krisha"
version = "2.0.0"
authors = [{ name = "Andrey Pronyaev", email = "abpronyaev@gmail.com" }]
description = "Rental ad parser"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "colorlog==6.8.2",
    "requests==2.31.0",
    "tqdm==4.66.2",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["black", "ruff"]

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.ruff]
exclude = ["__pycache__", ".git", ".venv*"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
fixable = ["I", "F401"]
ignore = ["N813"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
norecursedirs = [".git", ".venv*", "_sql"]
addopts = ["-vv", "-p no:cacheprovider", "-p no:warnings"]
python_files = ["test_*.py"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/andprov/krisha.kz"
Issues = "https://github.com/andprov/krisha.kz/issues"
